--- a/docs/note/基础数据结构.md
+++ b/docs/note/基础数据结构.md
@@ -227,7 +227,7 @@ int main() {
 
 ###### Infix「Convert To Postfix」
 
-* Never pop a$ '(' $from the stack except when processing a$ ')' $.
+* Never pop a '(' from the stack except when processing a  ')' .
 *  Observe that when ' (  ' is not in the stack, its precedence is the highest; but when it is in the stack, its precedence is the lowest.  Define in-stack precedence and incoming precedence for symbols, and each time use the corresponding precedence for comparison. 
 * Note:  a – b – c will be converted to a b – c –.  However, $2^{2^{3}}$must be converted to 2 2 3 ^ ^  ,  not 2 2 ^ 3 ^ since exponentiation associates right to left.
 
