--- a/docs/note/基础数据结构.md
+++ b/docs/note/基础数据结构.md
@@ -1,5 +1,3 @@
-# FDS
-
 ## SPARSE MATRIX
 
 > Representing a sparse matrix by a 2D array leads to wastage of lots of memory as zeroes in the matrix are of no use in most of the cases. So, instead of storing zeroes with non-zero elements, we only store non-zero elements. This means storing non-zero elements with triples- (Row, Column, value).
@@ -148,18 +146,18 @@ int main(){
 
 ## STACK
 
-### 1.ADT
+#### 1.ADT
 
-### 2.Implementations
+#### 2.Implementations
 
 * Linked List
 * Array : The stack model must be well encapsulated.
 
-### 3.Applications
+#### 3.Applications
 
-#### Balancing Symbols
+* Balancing Symbols
+  * Pseudo Code
 
-* Pseudo Code
 
 ```C
 Algorithm  {
@@ -179,7 +177,7 @@ Algorithm  {
 }
 ```
 
-* code in C[Array]
+
 
 ```C
 #include <stdio.h>
@@ -221,29 +219,32 @@ int main() {
 }
 ```
 
-#### Calculation
+* Calculation
 
-###### Prefix
+  * Prefix
 
-###### Infix「Convert To Postfix」
+  * Infix「Convert To Postfix」
 
 * Never pop a '(' from the stack except when processing a  ')' .
 *  Observe that when ' (  ' is not in the stack, its precedence is the highest; but when it is in the stack, its precedence is the lowest.  Define in-stack precedence and incoming precedence for symbols, and each time use the corresponding precedence for comparison. 
 * Note:  a – b – c will be converted to a b – c –.  However, $2^{2^{3}}$must be converted to 2 2 3 ^ ^  ,  not 2 2 ^ 3 ^ since exponentiation associates right to left.
 
- ###### Postfix 「Easier To Calculate」
+    *  Observe that when ' (  ' is not in the stack, its precedence is the highest; but when it is in the stack, its precedence is the lowest.  Define in-stack precedence and incoming precedence for symbols, and each time use the corresponding precedence for comparison. 
+
+    * Note:  a – b – c will be converted to a b – c –.  However, $2^{2^{3}}$must be converted to 2 2 3 ^ ^  ,  not 2 2 ^ 3 ^ since exponentiation associates right to left.
+
+
+  * Postfix 「Easier To Calculate」
 
 > ps:Tail Recursion! -- compliler will remove the recursion.
-
-
 
 ## The Queue ADT
 
 * A queue is a First-In-First-Out (FIFO) list, that is, an ordered list in which insertions take place at one end and deletions take place at the opposite end.
 
-#### Linked list implementation
+* Linked list implementation
 
-#### Array Implementation
+* Array Implementation
 
 ```C
 struct  QueueRecord {
@@ -255,11 +256,13 @@ struct  QueueRecord {
  } ; 
 ```
 
-#### A circular Queue
+* A circular Queue
+  * Rear[0] Font[1]
 
-* Rear[0] Font[1]
 
 ## TREE
+
+#### Basic Properties
 
 * N nodes and N-1 edges
 * node without any son is called  $leaf$
@@ -271,28 +274,29 @@ struct  QueueRecord {
 * 一个节点的祖先（ancestors）是从根到这个节点的路径上的所有节点
 * 一个节点的后裔（descendants）是这个节点子树中的所有节点
 
-### Implementation
+#### Implementation
 
-FirstChild-NextSibling 表示法
+* FirstChild-NextSibling 表示法
 
-- 记录第一个子节点和下一个兄弟节点
+  - 记录第一个子节点和下一个兄弟节点
 
-- 因为一棵树的儿子顺序不定，所以一棵树的表示方式不唯一
 
-  ```C
-  struct TreeNode {
-      ElementType Element;
-      PtrToNode FirstChild;
-      PtrToNode NextSibling;FirstChildFirfsads
-  };
-  typedef struct TreeNode *PtrToNode;
-  ```
+  - 因为一棵树的儿子顺序不定，所以一棵树的表示方式不唯一
+
+    ```C
+    struct TreeNode {
+        ElementType Element;
+        PtrToNode FirstChild;
+        PtrToNode NextSibling;FirstChildFirfsads
+    };
+    typedef struct TreeNode *PtrToNode;
+    ```
+
 
 ### Binary Tree
 
-- 完全二叉树（complete binary tree）是所有叶节点都在相邻的两层上的二叉树
-  - 除了最后一层，每一层都是满的
-  - 最后一层的节点都靠左排列
+#### Basic Properties
+
 - 第 *i* 层的节点数最多为 $2^{i-1}$
 - 深度为 *k* 的二叉树最多有$2^{k}-1$ 个节点
 - $n0$ 表示叶节点数，$n2$ 表示度为 2 的节点数，则 $n0 = n2 +1$
@@ -302,13 +306,13 @@ FirstChild-NextSibling 表示法
   - 完全二叉树的数组中元素全部分布在 1 ~ n 中
 - 表达式树（expression tree）
 
-####  遍历
+#### 遍历
 
-##### Preorder：root-left-right
+* Preorder：root-left-right
 
-##### Postorder：left-right-root
+* Postorder：left-right-root
 
-##### inorder:left-root-right
+* inorder:left-root-right
 
 * level order:
 
@@ -555,7 +559,7 @@ int main() {
 
 #### 创建TREE
 
-##### 1.Postorder &  Inorder 后序&中序
+* 1.Postorder &  Inorder 后序&中序
 
 ```C
 BiTree* postInTree(int post[],int in[],int n)  {
@@ -570,7 +574,7 @@ BiTree* postInTree(int post[],int in[],int n)  {
 }
 ```
 
-##### 2.preorder & inorder 前序&中序
+* 2.preorder & inorder 前序&中序
 
 ```C
 BiTree* preInTree2(int pre[],int in[],int n)  { //这是笔记上的我的方法,n是当前二叉树的节点数
@@ -587,7 +591,7 @@ BiTree* preInTree2(int pre[],int in[],int n)  { //这是笔记上的我的方法
 
 ### Application
 
-#### 1.Linux dir「Typical Preoder Traversal」
+* Linux dir「Typical Preoder Traversal」
 
 ```C
 static void  ListDir ( DirOrFile D, int Depth )
@@ -601,9 +605,9 @@ static void  ListDir ( DirOrFile D, int Depth )
 }
 ```
 
-#### 2.Calculating the size of the directory「Typical Postorder Traversal」
+* Calculating the size of the directory「Typical Postorder Traversal」
 
-#### 3.线索二叉树 Threader Binary Tree
+* 线索二叉树 Threader Binary Tree
 
 ### Binary Search Tree
 
@@ -635,12 +639,19 @@ SearchTree Delete(ElementType X, SearchTree T) {
 
 >  $C_{n}=\sum_{i=1}^{n} C_{i}C{n-i-1}$
 
-* 完全二叉树（complete binary tree）是所有叶节点都在相邻的两层上的二叉树
+### 完全二叉树（complete binary tree）
+
+* 所有叶节点都在相邻的两层上的二叉树
+
+* Basic Properties:
 
   - 除了最后一层，每一层都是满的
 
+
   - 最后一层的节点都靠左排列
+
   - $2^{h}$ ~ $2^{h+1}-1$ nodes$(0,1,2,3- height = 3)$
+
   - $h=O(log(n))$
 
 * INSERT
