--- a/docs/note/最大子列和.md
+++ b/docs/note/最大子列和.md
@@ -1,9 +1,9 @@
-# 最大子序列和的问题
-## O($N^3$) 
+# Maximum Subsequence Sum Problem
+* O($N^3$) 「基本思路，逐个列举，略」
 
-## O($N^2$)  
+* O($N^2$)  「优化一下列举，略」
 
-## divide & conquer O(N logN)
+* divide & conquer O(N logN)
 
 ```C
 static int
@@ -49,7 +49,8 @@ int MaxsubsequenceSum( const int A[],intN) {
     }
 ```
 ![Alt text](a.png)
-### 动态规划 O(N)
+* 动态规划 O(N)
+
 ```C
 int MaxSubsequenceSum( const int  A[ ],  int  N ) 
 { 
