--- a/docs/assembly/中断.md
+++ b/docs/assembly/中断.md
@@ -122,7 +122,7 @@ int 0FFh的中断向量保存在dword ptr 0:[3FCh];
 1000:2006 mov ah,4Ch
 ```
 * 上面这条int 21h指令执行时, cpu做了以下4件事:
-```
+```nasm
 IF=0
 TF=0  -防止中断里再次产生中断
 pushf
