--- a/docs/assembly/基础指令.md
+++ b/docs/assembly/基础指令.md
@@ -142,7 +142,7 @@ rep movsb
 ```
 
 * rep movsw的操作过程:[word]
-```
+```nasm
 again:
 if(cx == 0)
    goto done;
@@ -156,7 +156,7 @@ goto again
 done:
 ```
 * rep movsd的操作过程:[dword]
-```
+```nasm
 again:
 if(cx == 0)
    goto done;
@@ -206,7 +206,7 @@ done:
 * cx!=0 也可能提前结束循环
 * repne cmpsb
   * 若本次比较不等则继续比较下一个(repeat if not equal)
-```
+```nasm
 again:
 if(cx == 0) goto done;
 temp=byte ptr ds:[si]-byte ptr es:[di]
@@ -462,7 +462,7 @@ again:
     1D3E:0106     CD21     int  21h
     1D3E:0108     B44C     mov  ah，4Ch
     1D3E:010A     CD21     int  21h
-``` 
+```
   * 短跳太远跳不过去的解决办法
 ```nasm
 cmp ax, bx
