--- a/docs/assembly/基础指令.md
+++ b/docs/assembly/基础指令.md
@@ -191,7 +191,7 @@ rep movsb
 * repe cmpsb
   * 若本次比较相等则继续比较下一个(repeat if equal)
 
-```
+```assembly
 again:
 if(cx == 0) goto done;
 temp=byte ptr ds:[si]-byte ptr es:[di]
@@ -549,11 +549,14 @@ done:
 ```
 * jecxz 表示jump if ecx is zero
 #### call, ret指令
-```近调用：call near ptr dest
+```assembly
 近返回：retn，在多数情况下可写成ret
 远调用：call far ptr dest
 远返回：retf
 ```
+
+
+
 #### 通用数据传送指令：MOV，PUSH，POP，XCHG
 
 - mov byte ptr ds:[bx], byte ptr es:[di]
@@ -563,10 +566,9 @@ done:
 mov al, es:[di]
 mov ds:[bx], al
 ````
-* push、pop遵循先进后出(FILO)规则,例如:
-32位push、pop过程演示: [http://cc.zju.edu.cn/bhh/stk1.txt](http://cc.zju.edu.cn/bhh/stk1.txt) 代码
 
-```nasm
+
+```assembly
 eax=12345678h
 ebx=89ABCDEFh
 ss=1000h
@@ -576,7 +578,10 @@ push eax;(1)
 push ebx;(2)
 pop ebx;(3)
 pop eax;(4)
-````
+```
+
+
+
 * exchange 指令
 ````nasm
 mov ax,1
