--- a/docs/assembly/寄存器.md
+++ b/docs/assembly/寄存器.md
@@ -43,38 +43,39 @@
         - stc : cf=1
         - adc ax,bx;ax=ax+bx+cf
         
-        ```assembly
-            data segment
-            abc dw 32767
-            data ends
-            code segment
-            assume cs:code,ds:data
-            main:
-                mov ax,data
-                mov ds,ax
-                mov ax,[abc]
-                mov cx,16
-            again:
-                shl ax,1
-                jc is_one
-            is_zero:
-                mov dl,'0'
-                jmp out_put
-            is_one:
-                mov dl,'1'
-            out_put:
-                push ax
-                mov ah,2
-                int 21h
-                pop ax
-                sub cx,1
-                jnz again
-            mov ah,4Ch
+        ```nasm
+        data segment
+        abc dw 32767
+        data ends
+        code segment
+        assume cs:code,ds:data
+        main:
+            mov ax,data
+            mov ds,ax
+            mov ax,[abc]
+            mov cx,16
+        again:
+            shl ax,1
+            jc is_one
+        is_zero:
+            mov dl,'0'
+            jmp out_put
+        is_one:
+            mov dl,'1'
+        out_put:
+            push ax
+            mov ah,2
             int 21h
-            code ends
-            end main
-        
+            pop ax
+            sub cx,1
+            jnz again
+        mov ah,4Ch
+        int 21h
+        code ends
+        end main
         ```
+        
+        
         
         
     
@@ -243,10 +244,9 @@
     - 利用单步模式可以实现反调试,演示代码见以下链接: http://cc.zju.edu.cn/bhh/antidbg.zip
     
     * bp的隐含段地址是ss「用以代替sp，可获得堆栈中的内容』
-    
     * anti-debug 例子：
 
-```assembly
+```nasm
 code segment
 assume cs:code,ds:data
 main:
