--- a/docs/note/最大子列和.md
+++ b/docs/note/最大子列和.md
@@ -48,7 +48,10 @@ int MaxsubsequenceSum( const int A[],intN) {
     return MaxSubSum( A, 0, N - 1 );
     }
 ```
-![Alt text](a.png)
+![a](a.png)
+
+
+
 * 动态规划 O(N)
 
 ```C
