--- a/docs/note/基础数据结构.md
+++ b/docs/note/基础数据结构.md
@@ -699,3 +699,239 @@ ElementType DeleteMax(MaxHeap H) {
 ```
 
 > Question: how to make it a natural stop without using $Child != H->size$
+
+## The Dynamic Equivalence Problem
+
+A dynamic graph generally refers to a graph that keeps on changing its configuration. Let’s deep dive into it using an example:
+
+- Let’s consider the edge information for the given graph as: {{1,2}, {2,3}, {4,5}, {6,7}, {5,6}, {3,7}}. Now if we start adding the edges one by one, in each step the structure of the graph will change. So, after each step, if we perform the same operation on the graph while updating the edges, the result might be different. In this case, the graph will be considered a dynamic graph.
+- For example, after adding the first 4 edges if we look at the graph, we will find that node 4 and node 1 belong to different components but after adding all 6 edges if we search for the same we will figure out that node 4 and node 1 belong to the same component.
+
+### THE DISJOINT SET ADT
+
+- UNION
+
+> NOTE:UNION is the union of the head of one head to another(thus for a random element x,always find the "head" element Find(x) and modify s[Find(x)]
+
+```c
+void  SetUnion ( DisjSet S, 
+                 SetType Rt1, 
+                 SetType Rt2 )
+{    S [ Rt2 ] = Rt1 ;     }
+```
+
+- Find
+
+```c
+SetType  Find ( ElementType X, DisjSet S )
+{   for ( ; S[X] > 0; X = S[X] )   ;
+    return  X ;
+}
+```
+
+- Analysis for the Given problem
+
+```c
+Algorithm using union-find operations
+{  Initialize  Si = { i }  for  i = 1, ..., 12 ;
+   for  ( k = 1; k <= 9; k++ )  {  /* for each pair  i 等价j  即如果给出九组等价关系*/
+      if  ( Find( i ) != Find( j ) )
+          SetUnion( Find( i ), Find( j ) );
+   }
+}
+```
+
+#### Smart Union Algorithms
+
+- ！！其实可以不开新数组，只记录在根的数据中
+
+##### Union by rank
+
+- **Rank:**
+
+The rank of a node generally refers to the distance (the number of nodes including the leaf node) between the furthest leaf node and the current node. Basically rank includes all the nodes beneath the current node.
+
+- **Algorithm:**
+- **Initial configuration:**
+- **rank array:** This array is initialized with zero.
+- **parent array:** The array is initialized with the value of nodes i.e. parent[i] =i.
+- The algorithm steps are as follows:
+- Firstly, the Union function requires two nodes(**let’s say u and v**) as arguments. Then we will find the ultimate parent (using the findPar() function that is discussed later) of u and v. Let’s consider the ultimate parent of u is **pu** and the ultimate parent of v is **pv**.
+- After that, we will find the rank of **pu** and **pv**.
+- Finally, we will connect the ultimate parent with a smaller rank to the other ultimate parent with a larger rank. But if the ranks are equal, we can connect any parent to the other parent and we will increase the rank by one for the parent node to whom we have connected the other one.
+
+```c
+void make_set(int v) {
+    parent[v] = v;
+    rank[v] = 0;
+}
+void union_sets(int a, int b) {
+    a = find_set(a);
+    b = find_set(b);
+    if (a != b) {
+        if (rank[a] < rank[b])
+            swap(a, b);
+        parent[b] = a;
+        if (rank[a] == rank[b])
+            rank[a]++;
+    }
+}
+```
+
+##### Union by size
+
+- Quite similar as Union by rank.
+
+```C
+void make_set(int v) {
+    parent[v] = v;
+    size[v] = 1;
+}
+void union_sets(int a, int b) {
+    a = find_set(a);
+    b = find_set(b);
+    if (a != b) {
+        if (size[a] < size[b])
+            swap(a, b);
+        parent[b] = a;
+        size[a] += size[b];
+    }
+}
+```
+
+- Let T be a tree created by union-by-size with N nodes, then $(Height(T) \le \lfloor log_2N \rfloor + 1$
+
+- Proof: By induction. (Each element can have its set name changed at most$log_2N$
+
+   times.）「Union by size」
+
+  - First , all note are at depth 0 at the very beginning
+  - Every time,we do Union:the node was set on a new tree whose size is at least twice its size
+  - So a node from either set can only incrase the depth by 1
+  - For n nodes ,every node can have its set name changed at most log2 N times.
+  - Thus,Time complexity for Find is $O (l o g N )$
+
+- Here is a proof by induction on the tree height k. 「Union By Size」
+
+  - The base case K=0 is easy, since a tree of height 0 always has just 1 node
+  - Suppose the claim is true for h=k. Now consider a union-by-height tree of height k+1.
+  - There must have been a union that brought two trees together and increased the height of one of them from k to k+1.
+  - Let those two trees (at the time of that union) be T1 and T2. We know that both T1 and T2 were of height k before the union.
+  - If one of them were of height less than k, then union-by-height would have changed the root of that shorter one to make it point to the root of the taller one, and the height of the unioned tree would still be k.
+  - Now we can apply the induction hypothesis: the trees T1 and T2 each have at least  $2^k$ nodes. Thus, the unioned tree has at least $2^k + 2^k = 2^{k+1} $nodes.
+
+- Time complexity of $N$ Union and $M$ Find operations is now. $O( N + M log_2N)$
+
+##### Path Compression
+
+Basically, connecting each node in a particular path to its ultimate parent refers to path compression. Let’s understand it using the following illustration
+
+1. **Base case:** If the node and the parent of the node become the same, it will return the node.
+2. We will call the findPar() function for a node until it hits the base case and while backtracking we will update the parent of the current node with the returned value.
+
+```C
+SetType  Find ( ElementType  X, DisjSet  S )
+{
+    if ( S[ X ] <= 0 )    return  X;
+    else  return  S[ X ] = Find( S[ X ], S );//IMPORTANT！！！
+}
+//The simple implementation does what was intended: first find the representative of the set (root vertex), and then in the process of stack unwinding the visited nodes are attached directly to the representative.
+SetType  Find ( ElementType  X, DisjSet  S )
+{   ElementType  root,  trail,  lead;
+    for ( root = X; S[ root ] > 0; root = S[ root ] )
+        ;  /* find the root */
+    for ( trail = X; trail != root; trail = lead ) {
+       lead = S[ trail ] ;   
+       S[ trail ] = root ;   
+    }  /* collapsing */
+    return  root ;
+}
+```
+
+**NOTE**
+
+- Though using the path compression technique it seems like the rank of the node is also changing, we cannot be sure about it. So, we will not make any changes to the rank array while applying path compression.
+- Just take “height” as an estimated rank.
+
+##### Worst Case for Union-by-Rank and Path Compression[¶](#worst-case-for-union-by-rank-and-path-compression)
+
+```C
+#include <stdio.h>
+#include <stdlib.h>
+struct DisjointSet {
+    int *rank, *parent, *size;
+    int n;
+};
+struct DisjointSet* createDisjointSet(int n) {
+    struct DisjointSet* ds = (struct DisjointSet*)malloc(sizeof(struct DisjointSet));
+    ds->n = n;
+    ds->rank = (int*)malloc((n + 1) * sizeof(int));
+    ds->parent = (int*)malloc((n + 1) * sizeof(int));
+    ds->size = (int*)malloc((n + 1) * sizeof(int));
+    for (int i = 0; i <= n; i++) {
+        ds->rank[i] = 0;
+        ds->parent[i] = i;
+        ds->size[i] = 1;
+    }
+    return ds;
+}
+int findUPar(struct DisjointSet* ds, int node) {
+    if (node == ds->parent[node])
+        return node;
+    ds->parent[node] = findUPar(ds, ds->parent[node]);//PATH COMPRESSION
+    return ds->parent[node];
+}
+void unionByRank(struct DisjointSet* ds, int u, int v) {
+    int ulp_u = findUPar(ds, u);
+    int ulp_v = findUPar(ds, v);
+    if (ulp_u == ulp_v)
+        return;
+    if (ds->rank[ulp_u] < ds->rank[ulp_v]) {
+        ds->parent[ulp_u] = ulp_v;
+    } else if (ds->rank[ulp_v] < ds->rank[ulp_u]) {
+        ds->parent[ulp_v] = ulp_u;
+    } else {
+        ds->parent[ulp_v] = ulp_u;
+        ds->rank[ulp_u]++;
+    }
+}
+void unionBySize(struct DisjointSet* ds, int u, int v) {
+    int ulp_u = findUPar(ds, u);
+    int ulp_v = findUPar(ds, v);
+    if (ulp_u == ulp_v)
+        return;
+    if (ds->size[ulp_u] < ds->size[ulp_v]) {
+        ds->parent[ulp_u] = ulp_v;
+        ds->size[ulp_v] += ds->size[ulp_u];
+    } else {
+        ds->parent[ulp_v] = ulp_u;
+        ds->size[ulp_u] += ds->size[ulp_v];
+    }
+}
+int main() {
+    struct DisjointSet* ds = createDisjointSet(7);
+    unionBySize(ds, 1, 2);
+    unionBySize(ds, 2, 3);
+    unionBySize(ds, 4, 5);
+    unionBySize(ds, 6, 7);
+    unionBySize(ds, 5, 6);
+    if (findUPar(ds, 3) == findUPar(ds, 7)) {
+        printf("Same\n");
+    } else {
+        printf("Not same\n");
+    }
+    unionBySize(ds, 3, 7);
+    if (findUPar(ds, 3) == findUPar(ds, 7)) {
+        printf("Same\n");
+    } else {
+        printf("Not same\n");
+    }
+    free(ds->rank);
+    free(ds->parent);
+    free(ds->size);
+    free(ds);
+    return 0;
+}
+```
+
+![3](3.png)
