--- a/docs/note/基础数据结构.md
+++ b/docs/note/基础数据结构.md
@@ -608,6 +608,13 @@ static void  ListDir ( DirOrFile D, int Depth )
 * Calculating the size of the directory「Typical Postorder Traversal」
 
 * 线索二叉树 Threader Binary Tree
+  Inorder	
+
+> Rule 1:  If Tree->Left is null, replace it with a pointer to the inorder predecessor of Tree.
+
+> Rule 2:  If Tree->Right is null, replace it with a pointer to the inorder successor of Tree.
+
+> Rule 3:  There must not be any loose threads.  Therefore a threaded binary tree must have a head node of which the left child points to the first node.
 
 ### Binary Search Tree
 
@@ -641,6 +648,8 @@ SearchTree Delete(ElementType X, SearchTree T) {
 
 ### 完全二叉树（complete binary tree）
 
+#### Basic Properties
+
 * 所有叶节点都在相邻的两层上的二叉树
 
 * Basic Properties:
@@ -654,7 +663,7 @@ SearchTree Delete(ElementType X, SearchTree T) {
 
   - $h=O(log(n))$
 
-* INSERT
+#### INSERT
 
 ```C
 void Insert(ElementType X, MaxHeap H) {
@@ -670,7 +679,7 @@ void Insert(ElementType X, MaxHeap H) {
 }
 ```
 
-* DELETE
+#### DELETE
 
 ```C
 ElementType DeleteMax(MaxHeap H) {
@@ -699,6 +708,12 @@ ElementType DeleteMax(MaxHeap H) {
 ```
 
 > Question: how to make it a natural stop without using $Child != H->size$
+
+#### BuildHeap ( H )
+
+For the perfect binary tree of height h containing $2^{h+1}-1$ nodes, the sum of the heights of the nodes is $2^{h+1}-1 -(h + 1)$.
+
+$T ( N ) = O ( N )$
 
 ## The Dynamic Equivalence Problem
 
@@ -799,28 +814,40 @@ void union_sets(int a, int b) {
 }
 ```
 
-- Let T be a tree created by union-by-size with N nodes, then $(Height(T) \le \lfloor log_2N \rfloor + 1$
+- Let T be a tree created by union-by-size with N nodes, then $(Height(T) \le \lfloor log_2N \rfloor + 1)$
 
-- Proof: By induction. (Each element can have its set name changed at most$log_2N$
+- Proof: By induction. (Each element can have its set name changed at most. $log_2N$
 
-   times.）「Union by size」
+  times.）**「Union by size」**
 
-  - First , all note are at depth 0 at the very beginning
-  - Every time,we do Union:the node was set on a new tree whose size is at least twice its size
-  - So a node from either set can only incrase the depth by 1
-  - For n nodes ,every node can have its set name changed at most log2 N times.
-  - Thus,Time complexity for Find is $O (l o g N )$
+  First , all note are at depth 0 at the very beginning
 
-- Here is a proof by induction on the tree height k. 「Union By Size」
+  Every time,we do Union:the node was set on a new tree whose size is at least twice its size
 
-  - The base case K=0 is easy, since a tree of height 0 always has just 1 node
-  - Suppose the claim is true for h=k. Now consider a union-by-height tree of height k+1.
-  - There must have been a union that brought two trees together and increased the height of one of them from k to k+1.
-  - Let those two trees (at the time of that union) be T1 and T2. We know that both T1 and T2 were of height k before the union.
+  So a node from either set can only incrase the depth by $1$
+
+  For n nodes ,every node can have its set name changed at most $log_2N$ times.
+
+  Thus,Time complexity for Find is $O (l o g N )$
+
+- Here is a proof by induction on the tree height k. **「Union By Size」**
+
+  The base case K=0 is easy, since a tree of height 0 always has just 1 node
+
+  Suppose the claim is true for h=k. Now consider a union-by-height tree of height k+1.
+
+  There must have been a union that brought two trees together and increased the height of one of them from k to k+1.
+
+  Let those two trees (at the time of that union) be T1 and T2. We know that both T1 and T2 were of height k before the union.
+
   - If one of them were of height less than k, then union-by-height would have changed the root of that shorter one to make it point to the root of the taller one, and the height of the unioned tree would still be k.
-  - Now we can apply the induction hypothesis: the trees T1 and T2 each have at least  $2^k$ nodes. Thus, the unioned tree has at least $2^k + 2^k = 2^{k+1} $nodes.
+  - Now we can apply the induction hypothesis: the trees T1 and T2 each have at least  $2^k$ nodes. Thus, the unioned tree has at least $2^k + 2^k = 2^{k+1}$nodes.
 
 - Time complexity of $N$ Union and $M$ Find operations is now. $O( N + M log_2N)$
+
+##### Note:
+
+We can set $S [ Root ] = – size$, thus we don't need the array **size[ \]**
 
 ##### Path Compression
 
@@ -829,7 +856,7 @@ Basically, connecting each node in a particular path to its ultimate parent refe
 1. **Base case:** If the node and the parent of the node become the same, it will return the node.
 2. We will call the findPar() function for a node until it hits the base case and while backtracking we will update the parent of the current node with the returned value.
 
-```C
+```c
 SetType  Find ( ElementType  X, DisjSet  S )
 {
     if ( S[ X ] <= 0 )    return  X;
@@ -853,7 +880,7 @@ SetType  Find ( ElementType  X, DisjSet  S )
 - Though using the path compression technique it seems like the rank of the node is also changing, we cannot be sure about it. So, we will not make any changes to the rank array while applying path compression.
 - Just take “height” as an estimated rank.
 
-##### Worst Case for Union-by-Rank and Path Compression[¶](#worst-case-for-union-by-rank-and-path-compression)
+##### Worst Case for Union-by-Rank and Path Compression
 
 ```C
 #include <stdio.h>
