--- a/docs/note/最大子列和.md
+++ b/docs/note/最大子列和.md
@@ -1,4 +1,7 @@
 # Maximum Subsequence Sum Problem
+
+![5](5.png)
+
 * O($N^3$) 「基本思路，逐个列举，略」
 
 * O($N^2$)  「优化一下列举，略」
@@ -71,3 +74,17 @@ int MaxSubsequenceSum( const int  A[ ],  int  N )
  	return MaxSum; 
 } 
 ```
+
+* If counts negative paths
+
+```C
+int maxSubArray(int* nums, int numsSize) {
+    int pre = 0, maxAns = nums[0];
+    for (int i = 0; i < numsSize; i++) {
+        pre = fmax(pre + nums[i], nums[i]);
+        maxAns = fmax(maxAns, pre);
+    }
+    return maxAns;
+}
+```
+
