--- a/docs/note/最大子列和.md
+++ b/docs/note/最大子列和.md
@@ -30,15 +30,16 @@ MaxSubSum(const int A[],int left,int right){
   
     MaxLeftBorderSum = 0; LeftBorderSum = 0;
 
-    for(i=Center;i>=left;i++){
+    for(i=Cente+1;i>=left;i--){
         LeftBorderSum += A[i];
         if(leftBorderSum>MaxleftBorderSum){
             MaxleftBorderSum = LeftBorderSum;
         }
     }
+  
     MaxRightBorderSum = 0; 
     RightBorderSum = 0;
-    for(i=Center+1;i<=Right;i++){
+    for(i=Center;i<=Right;i++){
         RightBorderSum += A[i];
         if(RightBorderSum > MaxRightBorderSum){
             MaxRightBOrderSum = RightBorderSum
