--- a/docs/note/基础数据结构.md
+++ b/docs/note/基础数据结构.md
@@ -181,42 +181,54 @@ Algorithm  {
 
 ```C
 #include <stdio.h>
+#include <stdbool.h>
+#include <string.h>
+
 #define STACKSIZE 30 
-char stack[ STACKSIZE ]; // Global, but let's go with it
+char stack[STACKSIZE]; // Global, but let's go with it
 int top = 0;
-void push( char x ) { 
-    if( top == STACKSIZE )
-        puts( "Stack Full");
+
+void push(char x) {
+    if (top == STACKSIZE)
+        puts("Stack Full");
     else
-        stack[ top++ ] = x;
+        stack[top++] = x;
 }
-bool popExpect( char c ) { // compare expected char on top with passed char
-    return top && c == stack[ --top ];
+
+bool popExpect(char c) { // compare expected char on top with passed char
+    return top && c == stack[--top];
 }
-bool chk( const char *str ) {
+
+bool chk(const char *str) {
     char *cp, pairs[] = "(){}[]"; // three important pairs
     bool isGood = true; // optimism
-    for( int i = 0; isGood && str[ i ]; i++ )
+
+    for (int i = 0; isGood && str[i]; i++)
         // is this char one of the "special" ones?
-        if( ( cp = strchr( pairs, str[ i ] ) ) != NULL ) {
+        if ((cp = strchr(pairs, str[i])) != NULL) {
             int off = cp - pairs;
             // because "paired" 0,2,4 are open, 1,3,5 are close
-            if( off%2 == 0 ) // opening
-                push( cp[1] ); // push the close that matches this open
+            if (off % 2 == 0) // opening
+                push(cp[1]); // push the close that matches this open
             else // special closing
-                isGood = popExpect( str[ i ] ); // does this close match?
+                isGood = popExpect(str[i]); // does this close match?
         }
+
     return isGood && top == 0;
 }
+
 int main() {
     const char *s1 = "(foobar)({}){bar}[[[(foo)]]]"; // balanced
     const char *s2 = "(foobar)({}){ { bar}[[[(foo)]]]"; // unbalanced open
     const char *s3 = "(foobar)({}){ ] bar}[[[(foo)]]]"; // unbalanced close
-    puts( chk( s1 ) ? "Balanced" : "Unbalanced" );
-    puts( chk( s2 ) ? "Balanced" : "Unbalanced" );
-    puts( chk( s3 ) ? "Balanced" : "Unbalanced" );
+
+    puts(chk(s1) ? "Balanced" : "Unbalanced");
+    puts(chk(s2) ? "Balanced" : "Unbalanced");
+    puts(chk(s3) ? "Balanced" : "Unbalanced");
+
     return 0;
 }
+
 ```
 
 * Calculation
@@ -225,8 +237,136 @@ int main() {
 
   * Infix「Convert To Postfix」
 
+```C
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+// Function to return precedence of operators
+int prec(char c) {
+	if (c == '^')
+		return 3;
+	else if (c == '/' || c == '*')
+		return 2;
+	else if (c == '+' || c == '-')
+		return 1;
+	else
+		return -1;
+}
+
+// Function to return associativity of operators
+char associativity(char c) {
+	if (c == '^')
+		return 'R';
+	return 'L'; // Default to left-associative
+}
+
+// Structure to represent stack
+struct Stack {
+    int top;
+    unsigned capacity;
+    char* array;
+};
+
+// Function to initialize a stack
+struct Stack* createStack(unsigned capacity) {
+    struct Stack* stack = (struct Stack*)malloc(sizeof(struct Stack));
+    stack->capacity = capacity;
+    stack->top = -1;
+    stack->array = (char*)malloc(stack->capacity * sizeof(char));
+    return stack;
+}
+
+// Function to check if the stack is full
+int isFull(struct Stack* stack) {
+    return stack->top == stack->capacity - 1;
+}
+
+// Function to check if the stack is empty
+int isEmpty(struct Stack* stack) {
+    return stack->top == -1;
+}
+
+// Function to push an element to the stack
+void push(struct Stack* stack, char item) {
+    if (isFull(stack)) {
+        printf("Stack Full\n");
+        return;
+    }
+    stack->array[++stack->top] = item;
+}
+
+// Function to pop an element from the stack
+char pop(struct Stack* stack) {
+    if (isEmpty(stack)) {
+        return '$'; // Assuming '$' as an invalid character
+    }
+    return stack->array[stack->top--];
+}
+
+// The main function to convert infix expression
+// to postfix expression
+void infixToPostfix(char* exp) {
+    struct Stack* stack = createStack(strlen(exp));
+    char result[strlen(exp)];
+    int resultIndex = 0;
+
+    for (int i = 0; exp[i] != '\0'; i++) {
+        char c = exp[i];
+
+        // If the scanned character is
+        // an operand, add it to the output string.
+        if ((c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z') || (c >= '0' && c <= '9'))
+            result[resultIndex++] = c;
+
+        // If the scanned character is an
+        // ‘(‘, push it to the stack.
+        else if (c == '(')
+            push(stack, '(');
+
+        // If the scanned character is an ‘)’,
+        // pop and add to the output string from the stack
+        // until an ‘(‘ is encountered.
+        else if (c == ')') {
+            while (stack->top != -1 && stack->array[stack->top] != '(') {
+                result[resultIndex++] = pop(stack);
+            }
+            pop(stack); // Pop '('
+        }
+
+        // If an operator is scanned
+        else {
+            while (!isEmpty(stack) && prec(exp[i]) < prec(stack->array[stack->top]) ||
+                !isEmpty(stack) && prec(exp[i]) == prec(stack->array[stack->top]) &&
+                associativity(exp[i]) == 'L') {
+                result[resultIndex++] = pop(stack);
+            }
+            push(stack, c);
+        }
+    }
+
+    // Pop all the remaining elements from the stack
+    while (!isEmpty(stack)) {
+        result[resultIndex++] = pop(stack);
+    }
+
+    result[resultIndex] = '\0'; // Null-terminate the result string
+
+    printf("%s\n", result);
+}
+
+// Driver code
+int main() {
+    char exp[] = "a+b*(c^d-e)^(f+g*h)-i";
+    // Function call
+    infixToPostfix(exp);
+    return 0;
+}
+
+```
+
 * Never pop a '(' from the stack except when processing a  ')' .
-*  Observe that when ' (  ' is not in the stack, its precedence is the highest; but when it is in the stack, its precedence is the lowest.  Define in-stack precedence and incoming precedence for symbols, and each time use the corresponding precedence for comparison. 
+* Observe that when ' (  ' is not in the stack, its precedence is the highest; but when it is in the stack, its precedence is the lowest.  Define in-stack precedence and incoming precedence for symbols, and each time use the corresponding precedence for comparison. 
 * Note:  a – b – c will be converted to a b – c –.  However, $2^{2^{3}}$must be converted to 2 2 3 ^ ^  ,  not 2 2 ^ 3 ^ since exponentiation associates right to left.
 
     *  Observe that when ' (  ' is not in the stack, its precedence is the highest; but when it is in the stack, its precedence is the lowest.  Define in-stack precedence and incoming precedence for symbols, and each time use the corresponding precedence for comparison. 
@@ -307,6 +447,8 @@ struct  QueueRecord {
 - 表达式树（expression tree）
 
 #### 遍历
+
+https://blog.csdn.net/m0_73070900/article/details/130227715
 
 * Preorder：root-left-right
 
