modify font face

--- a/docs/PT/数字特征与特征函数.md
+++ b/docs/PT/数字特征与特征函数.md
@@ -1,3 +1,5 @@
+<font face = 'Times New Roman'>
+
 ## 数学期望
 
 ### 离散型随机变量的数学期望
@@ -189,3 +191,5 @@ $F'(x)=\frac{1}{2\pi}\int_{-\infty}^{+\infty}e^{-itx}f(t)dt$
 其他详细见P48
 ## 多元正态分布
 P149-P154
+
+</font>
