--- a/docs/note/基础数据结构.md
+++ b/docs/note/基础数据结构.md
@@ -1,3 +1,5 @@
+<font face = 'Times New Roman'>
+
 ## SPARSE MATRIX
 
 > Representing a sparse matrix by a 2D array leads to wastage of lots of memory as zeroes in the matrix are of no use in most of the cases. So, instead of storing zeroes with non-zero elements, we only store non-zero elements. This means storing non-zero elements with triples- (Row, Column, value).
@@ -1104,3 +1106,5 @@ int main() {
 ```
 
 ![3](3.png)
+
+</font>
