--- a/docs/note/最大子列和.md
+++ b/docs/note/最大子列和.md
@@ -1,3 +1,5 @@
+<font face = 'Times New Roman'>
+
 # Maximum Subsequence Sum Problem
 
 ![5](5.png)
@@ -89,3 +91,4 @@ int maxSubArray(int* nums, int numsSize) {
 }
 ```
 
+</font>
